--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "esModuleInterop": true,
         "strict": true,
+        "lib": ["ES2019", "DOM"],
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules/**/*.ts"]
