--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/sirikon/teseract#readme",
   "dependencies": {
-    "esbuild": "^0.11.12"
+    "esbuild": "^0.11.12",
+    "fibers": "^5.0.0"
   },
   "devDependencies": {
+    "sass": "^1.32.11",
     "typescript": "^4.2.4"
   }
 }
