--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "teseract",
   "version": "1.0.0",
   "description": "",
@@ -25,6 +26,8 @@
     "@types/mocha": "^8.2.2",
     "esbuild": "^0.11.12",
     "fibers": "^5.0.0",
+    "fs-extra": "^10.0.0",
+    "mime-types": "^2.1.30",
     "mocha": "^8.3.2",
     "ts-node": "^9.1.1"
   },
