--- a/example/package.json
+++ b/example/package.json
@@ -6,6 +6,12 @@
         "build": "teseract build",
         "release": "teseract release"
     },
+    "dependencies": {
+        "@types/react": "^17.0.15",
+        "@types/react-dom": "^17.0.9",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
+    },
     "devDependencies": {
         "teseract": "../",
         "typescript": "^4.2.4"
