--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -3,6 +3,7 @@
         "esModuleInterop": true,
         "strict": true,
         "lib": ["ES2019", "DOM"],
+        "jsx": "react"
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules/**/*.ts"]
