--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "esbuild": "^0.12.17"
+    "esbuild": "^0.12.17",
+    "esbuild-plugin-sass": "^0.5.2"
   }
 }
