--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "build": "tsc --project ."
   },
   "devDependencies": {
+    "@types/eslint": "^7.28.0",
     "@types/node": "^16.4.10",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
     "esbuild": "^0.12.17",
-    "esbuild-plugin-sass": "^0.5.2"
+    "esbuild-plugin-sass": "^0.5.2",
+    "eslint": "^7.32.0"
   }
 }
