--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "build": "tsc --project ."
   },
   "devDependencies": {
+    "@types/chai": "^4.2.21",
     "@types/eslint": "^7.28.0",
     "@types/mime-types": "^2.1.0",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.10",
+    "chai": "^4.3.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
@@ -16,6 +19,7 @@
     "esbuild": "^0.12.17",
     "esbuild-plugin-sass": "^0.5.2",
     "eslint": "^7.32.0",
-    "mime-types": "^2.1.32"
+    "mime-types": "^2.1.32",
+    "mocha": "^9.0.3"
   }
 }
