--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teseract",
-  "version": "2.0.1",
+  "version": "2.0.6",
   "bin": {
     "teseract": "bin/teseract.js"
   },
@@ -17,19 +17,19 @@
     "@types/chai": "^4.2.21",
     "@types/eslint": "^7.28.0",
     "@types/mime-types": "^2.1.0",
-    "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.10",
     "chai": "^4.3.4",
-    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "chokidar": "^3.5.2",
     "esbuild": "^0.12.17",
     "esbuild-plugin-sass": "^0.5.2",
     "eslint": "^7.32.0",
     "mime-types": "^2.1.32",
-    "mocha": "^9.0.3"
+    "mocha": "^9.0.3",
+    "ts-node": "^10.1.0"
   }
 }
