--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "scripts": {
     "example": "cd example && ts-node -P ../tsconfig.json ../src/main.ts",
+    "example-empty": "mkdir -p example-empty && cd example-empty && ts-node -P ../tsconfig.json ../src/main.ts",
     "build": "tsc --declaration --project .",
     "prepare": "npm run -s build"
   },
