--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^7.32.0",
     "mime-types": "^2.1.32",
     "mocha": "^9.0.3",
+    "superstruct": "^0.15.2",
     "ts-node": "^10.1.0"
   }
 }
