--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teseract",
-  "version": "2.4.2",
+  "version": "2.5.0",
   "bin": {
     "teseract": "bin/teseract.js"
   },
@@ -15,23 +15,24 @@
     "bin/*"
   ],
   "devDependencies": {
-    "@types/chai": "^4.2.21",
     "@types/eslint": "^7.28.0",
     "@types/mime-types": "^2.1.0",
-    "@types/node": "^16.4.10",
-    "chai": "^4.3.4",
-    "typescript": "^4.3.5"
+    "@types/node": "^16.6.0",
+    "@types/sass": "^1.16.1"
   },
   "dependencies": {
+    "@types/chai": "^4.2.21",
     "@types/mocha": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "chai": "^4.3.4",
     "chokidar": "^3.5.2",
-    "esbuild": "^0.12.17",
-    "esbuild-plugin-sass": "^0.5.2",
+    "esbuild": "^0.12.19",
+    "esbuild-plugin-sass": "^0.6.0",
     "eslint": "^7.32.0",
     "mime-types": "^2.1.32",
     "mocha": "^9.0.3",
     "superstruct": "^0.15.2",
-    "ts-node": "^10.1.0"
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5"
   }
 }
