--- a/example/package.json
+++ b/example/package.json
@@ -7,13 +7,12 @@
     "release": "teseract release"
   },
   "dependencies": {
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "teseract": "../",
-    "typescript": "^4.2.4"
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9"
   }
 }
