--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teseract",
-  "version": "2.9.0",
+  "version": "2.10.0",
   "bin": {
     "teseract": "bin/teseract.js"
   },
@@ -15,24 +15,24 @@
     "bin/*"
   ],
   "devDependencies": {
-    "@types/eslint": "^8.2.2",
+    "@types/eslint": "^8.4.1",
     "@types/mime-types": "^2.1.0",
-    "@types/node": "^16.11.19",
-    "@types/sass": "^1.43.1"
+    "@types/node": "^16.11.26",
+    "@types/sass": "^1.43.1",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0"
   },
   "dependencies": {
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "chai": "^4.3.4",
-    "chokidar": "^3.5.2",
-    "esbuild": "^0.14.11",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "chai": "^4.3.6",
+    "chokidar": "^3.5.3",
+    "esbuild": "^0.14.30",
     "esbuild-plugin-sass": "^1.0.1",
-    "eslint": "^8.7.0",
-    "mime-types": "^2.1.34",
-    "mocha": "^9.1.4",
-    "superstruct": "^0.15.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "eslint": "^8.12.0",
+    "mime-types": "^2.1.35",
+    "mocha": "^9.2.2",
+    "superstruct": "^0.15.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
