Update some deps and include prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,8 @@
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features",
     "files.insertFinalNewline": true
+  },
+  "files.exclude": {
+    "example": true
   }
 }
