--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
+    "prepare": "teseract gen",
     "start": "teseract serve",
     "test": "teseract test",
     "lint": "teseract lint",
@@ -7,12 +8,12 @@
     "release": "teseract release"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "teseract": "../",
-    "@types/react": "^17.0.15",
-    "@types/react-dom": "^17.0.9"
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6"
   }
 }
