--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
     "bin/*"
   ],
   "devDependencies": {
+    "@types/chai": "^4.3.0",
     "@types/eslint": "^8.4.1",
     "@types/mime-types": "^2.1.0",
-    "@types/node": "^16.11.26",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^16.11.45",
     "@types/sass": "^1.43.1",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0"
+    "prettier": "2.7.1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "chai": "^4.3.6",
     "chokidar": "^3.5.3",
-    "esbuild": "^0.14.30",
+    "esbuild": "^0.14.49",
     "esbuild-plugin-sass": "^1.0.1",
     "eslint": "^8.12.0",
     "mime-types": "^2.1.35",
-    "mocha": "^9.2.2",
-    "superstruct": "^0.15.4",
+    "mocha": "^10.0.0",
+    "superstruct": "^0.16.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
