--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "teseract",
-  "version": "2.13.0",
+  "version": "2.14.0",
   "bin": {
     "teseract": "bin/teseract.js"
   },
@@ -18,22 +18,22 @@
     "@types/chai": "^4.3.0",
     "@types/eslint": "^8.4.1",
     "@types/mime-types": "^2.1.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^16.11.45",
-    "@types/sass": "^1.43.1",
-    "prettier": "2.7.1"
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.9",
+    "@types/sass": "^1.43.1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "chai": "^4.3.6",
     "chokidar": "^3.5.3",
-    "esbuild": "^0.14.49",
+    "esbuild": "^0.15.14",
     "esbuild-plugin-sass": "^1.0.1",
     "eslint": "^8.12.0",
     "mime-types": "^2.1.35",
     "mocha": "^10.0.0",
-    "superstruct": "^0.16.0",
+    "superstruct": "^0.16.7",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "prettier": "2.7.1"
   }
 }
